--- a/literature.bib
+++ b/literature.bib
@@ -241,6 +241,17 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url       = {https://theworld.com/~dtd/sign_encrypt/sign_encrypt7.html},
 }
 
+@InProceedings{Seitz2003,
+  author    = {Seitz, L. and Pierson, J.-M. and Brunie, L.},
+  booktitle = {Second IEEE International Security in Storage Workshop},
+  title     = {Key Management for Encrypted Data Storage in Distributed Systems},
+  year      = {2003},
+  pages     = {20-20},
+  doi       = {10.1109/SISW.2003.10001},
+  groups    = {Requirements},
+  url       = {https://ieeexplore.ieee.org/document/1410756},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
