--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 \subfile{./txt/1-introduction.tex}
 \subfile{./txt/2-terms-and-defintions.tex}
 \subfile{./txt/3-requirements.tex}
-\subfile{./txt/4-survey-solutions.tex}
+\subfile{./txt/4-overview-solutions.tex}
 \subfile{./txt/5-approach.tex}
 \subfile{./txt/6-evaluation.tex}
 \subfile{./txt/7-conclusion.tex}
