--- a/zyx/mypackages.sty
+++ b/zyx/mypackages.sty
@@ -128,7 +128,7 @@ captionpos=b, float=htbp, xleftmargin=2em,frame=single,framexleftmargin=1.5em, b
 % Situation sensitive spacing at the end of commands
 \usepackage{xspace}
 % literature references
-\usepackage[style=numeric-comp,uniquename=init, maxcitenames=2, minbibnames=5, maxbibnames=5, giveninits=true]{biblatex}
+\usepackage[sorting=none, style=numeric-comp,uniquename=init, maxcitenames=2, minbibnames=5, maxbibnames=5, giveninits=true]{biblatex}
 % other styles suitable: ieee alphabetic-verb numeric-comp [Just try them^^]
 % Prevent line break at before citation number in textcite
 \renewcommand\namelabeldelim{\addnbspace}
