--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -7,6 +7,8 @@
 
 \section{Key escrow}
 
+\section{Certificate revocation problem}
+
 \section{Surreptitious Forwarding}
 Qulle here~\cite{Davis2001}
 
