--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -5,7 +5,7 @@
 \chapter{Overview of potential solutions}
 
 This chapter theoretically elaborates on different approaches to implementing the requirements defined in chapter \ref{requirements}.
-The sketched protocols in the following sections illustrate different encryption techniques.
+The sketched protocols illustrate different encryption techniques.
 Each section details the consequences of the technique to the requirements of this thesis.
 The outcome of this chapter is a set of possible solution strategies.
 
@@ -14,7 +14,7 @@ The outcome of this chapter is a set of possible solution strategies.
 An intuitive way of implementing a protocol that allows the exchange of logs among users is to rely on external encryption tools.
 Suppose that Alice wants to share a log with Bob.
 Alice could send the log to Bob with an encrypted email.
-Emails can be encrypted with dedicated protocols, e.g. PGP~\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc4880}{RFC4800}.} or S/MIME~\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc8551.html}{RFC8551}.}.
+Emails can be encrypted with dedicated protocols, e.g. PGP\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc4880}{RFC4800}.} or S/MIME\footnote{Defined by IETF in \href{https://www.rfc-editor.org/rfc/rfc8551.html}{RFC8551}.}.
 Such encryption technologies allow Alice to confidentially share logs with others.
 This approach, however, is limited and does not satisfy the identified requirements.
 It is the responsibility of the user to correctly apply the protocol.
@@ -22,10 +22,10 @@ This is error-prone, it could lead to unintended security issues and it is not u
 Sharing the log with $n$ users requires Alice to send $n$ encrypted emails.
 More importantly, this approach does not end-to-end encrypt logs because the server storing the logs still has access to the unencrypted data.
 Since the Overseer server is not trusted, confidentiality is broken (security requirement S1).
-Once an encrypted email is sent to the receiver there is no way for Alice to revoke any access to the log.
+Once an encrypted email is sent to the receiver, there is no way for Alice to revoke any access to the log.
 She loses control over the encrypted log because Bobs' email provider stores the cipher.
 This is not in the control of the toolchain.
-This implies, that Alice can not revoke the access anymore (functional requirement F3).
+It implies, that Alice can not revoke the access to the log anymore (functional requirement F3).
 Those limitations motivate the implementation of a more sophisticated protocol.
 
 \section{Mutual encryption}
@@ -65,7 +65,7 @@ The actual access log is signed by the monitor.
 The shared log is a data structure that contains the signed access log.
 It additionally specifies the user with whom the log is shared (e.g. receiver).
 The shared log itself is signed by the data owner.
-The signed share log is passed to the encryption algorithm.
+The signed shared log is passed to the encryption algorithm.
 After decryption, a receiver can validate if the sender intentionally shared the log.
 The receiver can also verify if the nested access log was signed by the claimed monitor.
 
@@ -100,17 +100,17 @@ To decrypt the log, Alice requires access to this symmetric key.
 Thus, the monitor needs to upload the generated key to the key server which allows Alice to download it.
 If she wants to share the log with Bob, there is no need to re-encrypt any data in the Overseer.
 Rather, she needs to tell the key server that Bob is allowed to access this key.
-Alice can also revoke any access to the file.
-She could simply tell the key server that a particular user is not allowed to access the key anymore.
+Alice can also revoke access to the file by telling the key server that a particular user is not allowed to access the key anymore.
 However, if a malicious user stored the key on his local machine, the revocation does not have any effect.
-It is better to additionally re-encrypt the encrypted log in the Overseer with a freshly generated key, which is then also uploaded to the key server.
+The encrypted log in the Overseer should therefore be re-encrypted with a freshly generated key.
+This new key is then also uploaded to the key server.
 
 This example shows that all functional requirements can be satisfied when utilizing a key server.
-The techniques introduced in section \ref{sec:mutual-encryption} to satisfy security requirements S2 (sign the receiver of the shared log) and S3 (sign the access log) can be applied here, too.
+The techniques introduced in section \ref{sec:mutual-encryption} to satisfy security requirements S2 (the receiver can verify it is a valid encryption endpoint) and S3 (the data owner can not forge logs) can be applied again.
 Security requirement S1, however, can not be met because the administrator of the key server has access to all keys.
 The confidentiality of all logs is broken because this allows him to potentially decrypt all logs.
 In section \ref{sec:end-to-end} it became clear that the encryption endpoints in E2EE systems can be defined arbitrarily.
-The here sketched protocol can nevertheless be classified as E2EE if the key server is defined as a valid decryption endpoint.
+The sketched protocol in this section can be classified as E2EE if the key server is defined as a valid decryption endpoint.
 But this does not meet the intuitive understanding of E2EE.
 The utilization of a key server also implies that we require an additional trusted component.
 This increases the attack surface of the system and does not adhere to the non-functional requirement N1 (minimal number of trusted entities).
@@ -130,18 +130,18 @@ A secret key of a user contains certain attributes.
 During encryption, a user specifies a policy that is encoded into the ciphertext.
 A ciphertext can only be decrypted with a secret key fulfilling that policy.
 Within the domain of \textit{ABE}, one can differentiate between \textit{ciphertext-policy ABE} and \textit{key-policy ABE}. 
-The above-described scenario, where the policy is encoded into the ciphertext and the key of the user is checked against this policy is called \textit{ciphertext-policy ABE}. 
-On the contrary, \textit{key-policy ABE} describes the scenario, where the policy is encoded into the key of the user.
+The above-described scenario, where the policy is encoded into the ciphertext and the key of the user is checked against this policy, is called \textit{ciphertext-policy ABE}. 
+On the contrary, \textit{key-policy ABE} describes the scenario where the policy is encoded into the key of the user.
 Thus, a user can only decrypt a ciphertext that is annotated with the corresponding attributes.~\cite{Bethencourt2007}
 
-The notation of \textit{ciphertext-policy ABE} directly can be used to encrypt data for multiple receivers. 
+The notation of \textit{ciphertext-policy ABE} can be used directly to encrypt data for multiple receivers. 
 During encryption, a policy is defined. 
 All users which are equipped with attributes fulfilling this policy can decrypt data.
 By encoding the name of the valid receivers into the policy, the encrypting user could specify the set of users who can decrypt.
 If the access of a user needs to be revoked, the cipher is re-encrypted with a new set of receivers.
 This ensures that all required functional requirements are met.
-One can equip the logs with cryptographic signatures (as described in section \ref{sec:mutual-encryption}).
-This technique fulfills the security requirements S2 (the receiver can verify it is a valid encryption endpoint) and S3 (the data owner can not forge logs).
+One can again equip the logs with cryptographic signatures (as described in section \ref{sec:mutual-encryption}).
+Those techniques fulfill the security requirements S2 (the receiver can verify it is a valid encryption endpoint) and S3 (the data owner can not forge logs).
 
 Attribute-based encryption usually relies on a trusted key generation center~\cite{Sahai2009}.
 It computes and distributes cryptographic keys.
@@ -171,12 +171,12 @@ The encryption algorithm requires a plaintext and a set of identities~\cite{sham
 Decryption requires the secret key of one of the users specified during encryption.
 
 Suppose that Alice wants to share encrypted data with Bob.
-One Alice and Bob received their secret keys from the trust center, Alice can encrypt the log and specify Bob as a valid receiver.
+Once Alice and Bob received their secret keys from the trust center, Alice can encrypt the log and specify Bob as a valid receiver.
 She can then upload the cipher.
-Bob can download and decrypt using his secret key.
+Bob can download and decrypt it using his secret key.
 If Alice wants to revoke access of Bob, she needs to re-encrypt the cipher and upload it again.
 Thus, all three functional requirements can be fulfilled.
-The techniques from section \ref{sec:mutual-encryption} can be applied, too.
+The techniques from section \ref{sec:mutual-encryption} can be applied again.
 This satisfies the security requirements S2 (the receiver can verify it is a valid encryption endpoint) and S3 (the data owner can not forge logs).
 
 \textit{IBBE} schemes suffer from key escrow because a trusted party computes and distributes secret keys.
@@ -197,7 +197,7 @@ The construction of \textit{CBE} schemes is motivated by the following observati
 \end{itemize}
 
 Consider the scenario where Alice wants to send encrypted data to Bob. 
-According to~\cite{Gentry2003}, \textit{CBE} schemes function as followed\footnote{For the sake of reduced complexity this is a simplified description.}:
+According to~\cite{Gentry2003}, \textit{CBE} schemes function as followed:
 
 \begin{enumerate}
     \item Alice generates a key pair with a \textit{PKE} key generation algorithm. She keeps the secret key secret. 
@@ -214,17 +214,15 @@ According to~\cite{Gentry2003}, \textit{CBE} schemes function as followed\footno
     Second, Bob needs a valid certificate because otherwise, he could not apply the \textit{IBE} decryption. 
     In particular, the first fact avoids key escrow (because the trust center does not know the secret key of Bob) and the second fact avoids the certificate revocation problem (because Bob can only decrypt with a valid certificate).
 \end{enumerate}
-
-This idea was later adopted to broadcast encryption.
-The construction yields a certificate-based broadcast encryption scheme (\textit{CBBE})~\cite{Li2018}.
-Although this construction relies on a key generation center it does not suffer from key escrow.
+This idea was later adopted to broadcast encryption yielding a certificate-based broadcast encryption scheme (\textit{CBBE})~\cite{Li2018}.
+Although this construction relies on a key generation center, it does not suffer from key escrow.
 Once keys are established, a user can encrypt data for a dedicated set of users.
 Only these users can decrypt the cipher.
 In particular, the key generation center can not decrypt the cipher because it does not have access to the PKE secret key of a user.
 Besides the functional requirements, \textit{CBBE} also satisfies the security requirements.
-The separation of shared log and signed log introduced in section \ref{sec:mutual-encryption} can be applied.
-Thus, all receivers can validate that they are intended decryption endpoints and that the access log was created by the claimed monitor.
-The notion of E2EE is also fulfilled because the trusted server can not decrypt.
+The distinction of shared log and signed log introduced in section \ref{sec:mutual-encryption} can be applied again.
+Thus, all receivers can validate that they are intended decryption endpoints (security requirement S2) and that the access log was created by the claimed monitor (security requirement S3).
+The notion of E2EE is also fulfilled because the trusted server can not decrypt the logs.
 
 Unfortunately, no reference implementations of \textit{CBBE} exist. 
 This fact is a major drawback in the context of this thesis.
@@ -247,8 +245,7 @@ This key is transferred to the proxy.
 It allows the proxy to re-encrypt $E_A$ to $E_B$.
 Bob can then download and only he can decrypt $E_B$.
 
-The proxy needs to be semi-trusted.
-With the knowledge of $rk_{Alice,Bob}$ it can re-encrypt all ciphers from Alice to Bob~\cite{Chen2018}.
+The proxy needs to be semi-trusted because with the knowledge of $rk_{Alice,Bob}$ it can re-encrypt all ciphers from Alice to Bob~\cite{Chen2018}.
 This has important consequences for the security of the protocol implemented in this thesis.
 Once Alice defined Bob as a valid receiver for a single log, the server could re-encrypt all ciphers of Alice for Bob.
 This, however, affects the notion of E2EE.
